--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <style>
     body {
+        width: 100%;
         overflow-x: hidden; /* Hides the vertical scrollbar */
     }
 </style>
@@ -40,8 +41,8 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="hero-section">
-                        <h2>Boost Your Social Media Traffic and Earnings with Effortless Video Creation</h2>
-                        <p>Create Stunning Videos in Minutes and Watch Your Commissions Soar!</p>
+                        <h2 data-aos="flip-right">Boost Your Social Media Traffic and Earnings with Effortless Video Creation</h2>
+                        <p data-aos="flip-right">Create Stunning Videos in Minutes and Watch Your Commissions Soar!</p>
                         <a href="#pricing" class="cta-button">Start Your Free Trial</a>
                     </div>
                 </div>
@@ -72,19 +73,19 @@
         
     </header>
 
-    <section  data-aos="fade-up-right" class="problem-statement">
-        <h2  class="Content-head" >Struggling to Drive Traffic and Earn Commissions?</h2>
-        <p>Hey there, marketer! We know how challenging it is to consistently create high-quality videos that attract traffic and drive conversions. You’re juggling a million things, and spending hours on video production just isn’t feasible. Plus, not everyone is comfortable in front of the camera or has the knack for scripting and editing. It’s a tough gig, but we’ve got your back!</p>
+    <section  class="problem-statement">
+        <h2 data-aos="flip-right" class="Content-head" >Struggling to Drive Traffic and Earn Commissions?</h2>
+        <p data-aos="flip-right">Hey there, marketer! We know how challenging it is to consistently create high-quality videos that attract traffic and drive conversions. You’re juggling a million things, and spending hours on video production just isn’t feasible. Plus, not everyone is comfortable in front of the camera or has the knack for scripting and editing. It’s a tough gig, but we’ve got your back!</p>
     </section>
 
-    <section data-aos="fade-up-left" class="introduction">
+    <section  class="introduction">
         <h2  class="Content-head">Meet AIMagicStudio – Your Secret Weapon for Video Marketing</h2>
-        <p>Imagine a world where creating engaging, professional videos takes just a few minutes. Sounds like a dream, right? That’s exactly what AIMagicStudio offers. Our AI-powered platform handles everything from scriptwriting to design and voiceovers, so you can focus on what you do best – marketing and earning commissions.</p>
+        <p data-aos="flip-right">Imagine a world where creating engaging, professional videos takes just a few minutes. Sounds like a dream, right? That’s exactly what AIMagicStudio offers. Our AI-powered platform handles everything from scriptwriting to design and voiceovers, so you can focus on what you do best – marketing and earning commissions.</p>
         <ul>
-            <li>Automated Video Creation: Just type in your keyword, and watch AIMagicStudio work its magic.</li>
-            <li>Faceless Videos: No need to appear on camera. Our AI takes care of everything.</li>
-            <li>Consistent Uploads: Schedule your videos in advance and keep your content fresh.</li>
-            <li>Seamless Integration: Automatically upload videos to your favorite social media platforms using webhooks with services like Make.com and Zapier.com.</li>
+            <li data-aos="flip-right">Automated Video Creation: Just type in your keyword, and watch AIMagicStudio work its magic.</li>
+            <li data-aos="flip-right">Faceless Videos: No need to appear on camera. Our AI takes care of everything.</li>
+            <li data-aos="flip-right">Consistent Uploads: Schedule your videos in advance and keep your content fresh.</li>
+            <li data-aos="flip-right">Seamless Integration: Automatically upload videos to your favorite social media platforms using webhooks with services like Make.com and Zapier.com.</li>
         </ul>
         <a href="#pricing" class="cta-button">Get Started Now</a>
     </section>
@@ -92,14 +93,14 @@
     <section  class="success-stories">
         <h2  class="Content-head">Real Marketers, Real Results</h2>
         <div  class="testimonials">
-            <div  data-aos="fade-up-right" class="testimonial">
-                <p>New Instagram Account: Reached over 700 new accounts in a week, with videos getting over 100 views each.</p>
+            <div  data-aos="flip-right"  class="testimonial">
+                <p data-aos="flip-right">New Instagram Account: Reached over 700 new accounts in a week, with videos getting over 100 views each.</p>
             </div>
-            <div data-aos="fade-up-left"  class="testimonial">
-                <p>Aged Instagram Account: Reached over 1.3k accounts, significantly boosting affiliate traffic.</p>
+            <div data-aos="flip-right"  class="testimonial">
+                <p data-aos="flip-right">Aged Instagram Account: Reached over 1.3k accounts, significantly boosting affiliate traffic.</p>
             </div>
-            <div data-aos="fade-up-right" class="testimonial">
-                <p>Amazon Affiliate Success: Over 300 clicks on affiliate links and earned $95.98 in commissions within just one week.</p>
+            <div data-aos="flip-right" class="testimonial">
+                <p data-aos="flip-right">Amazon Affiliate Success: Over 300 clicks on affiliate links and earned $95.98 in commissions within just one week.</p>
             </div>
         </div>
         <a href="#pricing" class="cta-button">Join the Success – Start Your Free Trial</a>
@@ -109,46 +110,38 @@
   
     <section  id="pricing" class="pricing-plans">
         <h2 class="Content-head">Choose the Plan That’s Right for You</h2>
-        <div data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" class="plan">
-            <h3>Free Plan</h3>
-            <p>Test AIMagicStudio with a single downloadable video with a watermark. Generate unlimited videos without voiceovers.</p>
-            <a href="#cta" class="cta-button">Start Free</a>
+        <div  class="plan">
+            <h3 data-aos="flip-right">Free Plan</h3>
+            <p data-aos="flip-left">Test AIMagicStudio with a single downloadable video with a watermark. Generate unlimited videos without voiceovers.</p>
+            <a href="#cta" data-aos="flip-right" class="cta-button">Start Free</a>
         </div>
-        <div data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" class="plan">
-            <h3>Starter Plan ($27 One-Time)</h3>
-            <p>Generate videos with voiceovers and download watermark-free videos until storage credits are exhausted. Typically allows for over 50 videos on average.</p>
-            <a href="#cta" class="cta-button">Choose Starter</a>
+        <div  class="plan">
+            <h3 data-aos="flip-right">Starter Plan ($27 One-Time)</h3>
+            <p data-aos="flip-left">Generate videos with voiceovers and download watermark-free videos until storage credits are exhausted. Typically allows for over 50 videos on average.</p>
+            <a href="#cta" data-aos="flip-right" class="cta-button">Choose Starter</a>
         </div>
-        <div  data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" class="plan">
-            <h3>Pro Plan ($47/Month)</h3>
-            <p>Monthly credits for generating voiceover videos and downloading watermark-free content. Typically allows for over 200 videos on average per month.</p>
-            <a href="#cta" class="cta-button">Choose Pro</a>
+        <div   class="plan">
+            <h3 data-aos="flip-right">Pro Plan ($47/Month)</h3>
+            <p data-aos="flip-left">Monthly credits for generating voiceover videos and downloading watermark-free content. Typically allows for over 200 videos on average per month.</p>
+            <a data-aos="flip-right" href="#cta" class="cta-button">Choose Pro</a>
         </div>
-        <div  data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" class="plan">
-            <h3>Premium Plan ($99/Month)</h3>
-            <p>Monthly credits for generating voiceover videos and downloading watermark-free content. Typically allows for over 600 videos on average per month.</p>
-            <a href="#cta" class="cta-button">Choose Premium</a>
+        <div   class="plan">
+            <h3 data-aos="flip-right">Premium Plan ($99/Month)</h3>
+            <p data-aos="flip-left">Monthly credits for generating voiceover videos and downloading watermark-free content. Typically allows for over 600 videos on average per month.</p>
+            <a data-aos="flip-right" href="#cta" class="cta-button">Choose Premium</a>
         </div>
     </section>
 
-    <section  class="testimonials">
+    <section   class="testimonials">
         <h2 class="Content-head">Here’s What Our Users Are Saying</h2>
-        <div data-aos="fade-left"  class="testimonial">
-            <p>"Creating videos used to take up all my time. With AIMagicStudio, I can now produce high-quality content consistently without any hassle. It’s been a game-changer for my business!" – Sarah, Small Business Owner</p>
+        <div  class="testimonial">
+            <p data-aos="flip-left">"Creating videos used to take up all my time. With AIMagicStudio, I can now produce high-quality content consistently without any hassle. It’s been a game-changer for my business!" – Sarah, Small Business Owner</p>
         </div>
-        <div data-aos="fade-right"  class="testimonial">
-            <p>"I was hesitant to get into video marketing because I didn’t want to be on camera. AIMagicStudio’s faceless video feature is exactly what I needed!" – Mike, Affiliate Marketer</p>
+        <div   class="testimonial">
+            <p data-aos="flip-left">"I was hesitant to get into video marketing because I didn’t want to be on camera. AIMagicStudio’s faceless video feature is exactly what I needed!" – Mike, Affiliate Marketer</p>
         </div>
-        <div data-aos="fade-left"  class="testimonial">
-            <p>"Thanks to AIMagicStudio, my Instagram engagement has skyrocketed. The automated uploads have made my life so much easier." – Emma, Social Media Influencer</p>
+        <div  class="testimonial">
+            <p data-aos="flip-left">"Thanks to AIMagicStudio, my Instagram engagement has skyrocketed. The automated uploads have made my life so much easier." – Emma, Social Media Influencer</p>
         </div>
         <a href="#cta" class="cta-button">Join Our Happy Customers</a>
     </section>
@@ -172,17 +165,17 @@
         <a href="#cta" class="cta-button">Get Started Now</a>
     </section>
 
-    <section  data-aos="fade-down-left" class="features">
+    <section   class="features">
         <h2 class="Content-head">All the Tools You Need for Video Marketing Success</h2>
-        <ul data-aos="flip-left" >
-            <li>100+ Premium Templates: Choose from a wide variety of professional templates for any niche.</li>
-            <li>Automated Subtitles: Let AI transcribe audio into subtitles effortlessly.</li>
-            <li>Audiowave Generator: Automatically add audiowaves to your videos.</li>
-            <li>Brand Personalization: Customize videos with your brand assets in just one click.</li>
-            <li>Media Library Integration: Easily upload and manage your assets.</li>
-            <li>3 Million+ Stock Photos and Videos: Access a vast library of high-quality media.</li>
-            <li>Multi-Platform Videos: Create videos for Facebook, Instagram, YouTube, TikTok, Snapchat, and more.</li>
-            <li>HD Video Production: Produce videos in any format, including reels, stories, ads, and posts.</li>
+        <ul  >
+            <li data-aos="flip-left">100+ Premium Templates: Choose from a wide variety of professional templates for any niche.</li>
+            <li data-aos="flip-left">Automated Subtitles: Let AI transcribe audio into subtitles effortlessly.</li>
+            <li data-aos="flip-left">Audiowave Generator: Automatically add audiowaves to your videos.</li>
+            <li data-aos="flip-left">Brand Personalization: Customize videos with your brand assets in just one click.</li>
+            <li data-aos="flip-left">Media Library Integration: Easily upload and manage your assets.</li>
+            <li data-aos="flip-left">3 Million+ Stock Photos and Videos: Access a vast library of high-quality media.</li>
+            <li data-aos="flip-left">Multi-Platform Videos: Create videos for Facebook, Instagram, YouTube, TikTok, Snapchat, and more.</li>
+            <li data-aos="flip-left">HD Video Production: Produce videos in any format, including reels, stories, ads, and posts.</li>
         </ul>
         <a href="#cta" class="cta-button">Get AIMagicStudio Now</a>
     </section>
@@ -247,3 +240,4 @@
     </script>
 </body>
 </html>
+
